--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/leogdion/lansingjs-1601-sequelize#readme",
   "dependencies": {
+    "body-parser": "^1.14.2",
     "express": "^4.13.3",
     "sequelize": "^3.17.1",
     "sqlite3": "^3.1.1"
